Alignment fix for myListings page

--- a/styles/listingCard.scss
+++ b/styles/listingCard.scss
@@ -14,7 +14,7 @@
   margin-bottom: 60px;
   flex-direction: column;
   align-items: center;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
 }
 
 .card-fullpage-title{
@@ -30,7 +30,7 @@
   font-weight: bold;
   font-style: italic;
   text-transform: uppercase;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
 }
 
 .card-image-info{
@@ -47,7 +47,7 @@
   margin: 60px;
   width: 30vw;
   flex-direction: column;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
 }
 
 .message-logo{
@@ -56,7 +56,7 @@
   border: solid;
   padding: 5px;
   width: 30%;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
   transition: transform .2s;
 }
 
@@ -90,7 +90,7 @@
   width: 40%;
   flex-direction: column;
   justify-content: space-evenly;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
 }
 
 .user-avatar{
@@ -240,7 +240,7 @@
   height: 25%;
   font-size: 110%;
   flex-direction: column;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
 }
 
 .card-description-tag{
@@ -267,7 +267,7 @@
   border: solid;
   padding: 5px;
   width: 30%;
-  box-shadow: 5px 5px #37D338;
+  box-shadow: 5px 5px 5px #37D338;
   transition: transform .2s;
 }
 
